--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ body {
     width: 640px;
   }
 }
+
 @media (max-width: 650px) {
   .App {
     width: 90vw;
@@ -33,7 +34,7 @@ body {
   padding-right: 20px;
 }
 
-/* MyButton */
+/* MY BUTTON */
 .MyButton {
   cursor: pointer;
   border: none;
@@ -57,7 +58,6 @@ body {
 }
 
 /* HEADER */
-
 header {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -87,7 +87,7 @@ header .head_btn_right {
   justify-content: end;
 }
 
-/* DiaryList */
+/* DIARYLIST */
 .DiaryList .menu_wrapper {
   margin-top: 20px;
   margin-bottom: 30px;
@@ -115,7 +115,7 @@ header .head_btn_right {
   font-size: 18px;
 }
 
-/* DiaryItem */
+/* DIARYITEM */
 .DiaryItem {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -140,6 +140,7 @@ header .head_btn_right {
 .DiaryItem .emotion_img_wrapper_1 {
   background-color: #64c964;
 }
+
 .DiaryItem .emotion_img_wrapper_2 {
   background-color: #9dd772;
 }
@@ -174,4 +175,108 @@ header .head_btn_right {
 
 .DiaryItem .btn_wrapper {
   min-width: 70px;
+}
+
+/* DIARY EDITOR */
+.DiaryEditor {
+}
+
+.DiaryEditor section {
+  margin-bottom: 40px;
+}
+
+.DiaryEditor h4 {
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.DiaryEditor .input_box {
+}
+
+.DiaryEditor .input_date {
+  border: none;
+  border-radius: 5px;
+  background-color: #ececec;
+
+  padding: 10px 20px 20px 10px;
+
+  cursor: pointer;
+  font-family: "Nanum Pen Script";
+  font-size: 20px;
+}
+
+.DiaryEditor .emotion_list_wrapper {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  gap: 2%;
+}
+
+.DiaryEditor textarea {
+  font-family: "Nanum Pen Script";
+  font-size: 20px;
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 200px;
+  resize: vertical;
+
+  border: none;
+  border-radius: 5px;
+  background-color: #ececec;
+  padding: 20px;
+}
+
+.DiaryEditor .control_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* EMOTION ITEM */
+.EmotionItem {
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 20px 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.EmotionItem img {
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+.EmotionItem span {
+  font-size: 18px;
+}
+
+.EmotionItem_off {
+  background-color: #ececec;
+}
+
+.EmotionItem_on_1 {
+  background-color: #64c964;
+  color: white;
+}
+
+.EmotionItem_on_2 {
+  background-color: #9dd772;
+  color: white;
+}
+
+.EmotionItem_on_3 {
+  background-color: #fdce17;
+  color: white;
+}
+
+.EmotionItem_on_4 {
+  background-color: #fd8446;
+  color: white;
+}
+
+.EmotionItem_on_5 {
+  background-color: #fd565f;
+  color: white;
 }
